Switched back to rigid

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 108,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,41 @@
     "def apply_affine_transformation(volume, matrix):\n",
     "    \"\"\"Apply an affine transformation to a 3D volume.\"\"\"\n",
     "    transformed_volume = affine_transform(volume, matrix, offset=0, order=1)\n",
-    "    return transformed_volume\n"
+    "    return transformed_volume\n",
+    "\n",
+    "import numpy as np\n",
+    "from scipy.spatial.transform import Rotation as R\n",
+    "\n",
+    "def euler_to_rigid_transform(euler_transform, rotation_order='xyz', degrees=False):\n",
+    "    \"\"\"\n",
+    "    Converts a 6-variable Euler transform to a 4x4 rigid transformation matrix.\n",
+    "    \n",
+    "    Parameters:\n",
+    "        euler_transform (list or np.ndarray): A list or array of 6 values.\n",
+    "                                              The first 3 are rotation (rx, ry, rz),\n",
+    "                                              the last 3 are translation (tx, ty, tz).\n",
+    "        rotation_order (str): Order of Euler rotations (default 'xyz').\n",
+    "        degrees (bool): Whether the input rotation angles are in degrees. Default is radians.\n",
+    "\n",
+    "    Returns:\n",
+    "        np.ndarray: A 4x4 rigid transformation matrix.\n",
+    "    \"\"\"\n",
+    "    assert len(euler_transform) == 6, \"Euler transform must have 6 elements\"\n",
+    "\n",
+    "    rot_angles = euler_transform[:3]\n",
+    "    translation = euler_transform[3:]\n",
+    "\n",
+    "    # Create rotation matrix\n",
+    "    rotation = R.from_euler(rotation_order, rot_angles, degrees=degrees)\n",
+    "    rot_matrix = rotation.as_matrix()\n",
+    "\n",
+    "    # Construct 4x4 transformation matrix\n",
+    "    transform = np.eye(4)\n",
+    "    transform[:3, :3] = rot_matrix\n",
+    "    transform[:3, 3] = translation\n",
+    "\n",
+    "    return transform\n",
+    "# Example usage:\n"
    ]
   },
   {
@@ -167,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 114,
    "id": "ec1aac4f",
    "metadata": {},
    "outputs": [
@@ -175,36 +209,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "array([[ 1.00020121e+00, -7.85455904e-02, -1.64689004e-02,\n",
-      "        -1.46273691e+03],\n",
-      "       [ 1.81477262e-01,  1.14218291e+00,  7.63646430e-02,\n",
-      "        -4.31843852e+03],\n",
-      "       [-3.29134061e-02, -7.44862557e-02,  1.07530126e+00,\n",
-      "         1.31840353e+03],\n",
+      "array([[ 8.81733161e-01,  4.71536304e-01,  1.41473275e-02,\n",
+      "         1.26889695e+02],\n",
+      "       [-4.71256684e-01,  8.79048775e-01,  7.20443488e-02,\n",
+      "         4.46024200e+01],\n",
+      "       [ 2.15353351e-02, -7.01909140e-02,  9.97301090e-01,\n",
+      "        -1.89718540e+01],\n",
       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
-      "         1.00000000e+00]])\n"
+      "         1.00000000e+00]])\n",
+      "(3, 3)\n"
      ]
     }
    ],
    "source": [
-    "moving_src = np.array([moving_all[s] for s in good_keys])\n",
-    "fixed_src = np.array([fixed_all[s] for s in good_keys])\n",
-    "transformation_matrix = compute_affine_transformation(moving_src, fixed_src)\n",
-    "print(repr(transformation_matrix))"
+    "#moving_src = np.array([moving_all[s] for s in good_keys])\n",
+    "#fixed_src = np.array([fixed_all[s] for s in good_keys])\n",
+    "#transformation_matrix = compute_affine_transformation(moving_src, fixed_src)\n",
+    "\n",
+    "transform_parameters = [0.955146, 0.333175, 0.110121, -0.462277, 0.956330, \n",
+    "                                    0.056532, 0.003245, -0.017109, 0.969857, 307.262939, 123.364020, -40.399677]\n",
+    "transform_parameters = [0.955146, 0.333175, 0.110121, -0.462277, 0.956330, \n",
+    "                                    0.056532, 0.003245, -0.017109, 0.969857, 0, 0, 0]\n",
+    "rotation = transform_parameters[:9]\n",
+    "rotation = np.array(rotation).reshape(3,3)\n",
+    "transformation_matrix = rotation.copy()\n",
+    "translation = np.array(transform_parameters[-3:])\n",
+    "t = translation.reshape(3,1)\n",
+    "transformation_matrix = np.hstack( [rotation, t ])\n",
+    "transformation_matrix = np.vstack([transformation_matrix, np.array([0, 0, 0, 1])])\n",
+    "#print(repr(transformation_matrix))\n",
+    "\n",
+    "euler = [-0.070265, -0.021537, -0.490839, 126.889695, 44.602420, -18.971854]  # [rx, ry, rz, tx, ty, tz]\n",
+    "T = euler_to_rigid_transform(euler, degrees=False)\n",
+    "#print(\"Rigid Transformation Matrix:\\n\", T)\n",
+    "print(repr(T))\n",
+    "A = T[:3, :3]\n",
+    "print(A.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "92538c39",
+   "execution_count": 117,
+   "id": "16d3534e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[535 666 515]\n",
+      "[920. 415. 459.]\n"
+     ]
+    }
+   ],
    "source": [
     "# Apply affine transformation\n",
     "# Apply affine transformation\n",
-    "origin = np.array([884, 697, 296])\n",
+    "origin = np.array([535, 666, 515])\n",
     "print(origin)\n",
-    "trans_origin = apply_affine_transform(origin, transformation_matrix)\n",
+    "#print(origin + translation/10)\n",
+    "#transformation_matrix = np.linalg.inv(transformation_matrix)\n",
+    "trans_origin = apply_affine_transform(origin, T)\n",
     "print(np.round(trans_origin))\n",
     "# 100,10\n",
     "#[884 697 296]\n",
