Fixed the path in reverse trans in registration

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,18 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/eddyod/programming/pipeline/src\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -45,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "45da981f",
    "metadata": {},
    "outputs": [],
@@ -56,18 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "299762ca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XGBoost Version: 2.1.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from library.controller.sql_controller import SqlController\n",
     "from library.image_manipulation.filelocation_manager import FileLocationManager\n",
@@ -80,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -131,23 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "b6548580",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DK55 len=28\n",
-      "Allen len=37\n",
-      "22\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "moving_name = 'DK55'\n",
-    "fixed_name = 'Allen'\n",
+    "moving_name = 'DK78'\n",
+    "fixed_name = 'MD589'\n",
     "\n",
     "moving_all = list_coms(moving_name, scaling_factor=10)\n",
     "fixed_all = list_coms(fixed_name, scaling_factor=1)\n",
@@ -161,19 +135,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "88ba5a47",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#good_keys=22\n",
-      "{'DC_L', 'LRt_L', 'LRt_R', '3N_R', '6N_R', 'Amb_R', 'PBG_L', '4N_R', 'DC_R', 'LC_R', '3N_L', '7N_R', '5N_L', 'LC_L', '6N_L', '7n_L', 'PBG_R', '4N_L', 'Amb_L', '7N_L', '5N_R', 'AP'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# these keys have very high errors: 'RtTg', 'AP'\n",
     "midbrain_keys = {\n",
@@ -201,67 +166,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "ec1aac4f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "array([[ 8.81733161e-01,  4.71536304e-01,  1.41473275e-02,\n",
-      "         1.26889695e+02],\n",
-      "       [-4.71256684e-01,  8.79048775e-01,  7.20443488e-02,\n",
-      "         4.46024200e+01],\n",
-      "       [ 2.15353351e-02, -7.01909140e-02,  9.97301090e-01,\n",
-      "        -1.89718540e+01],\n",
-      "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
-      "         1.00000000e+00]])\n",
-      "(3, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#moving_src = np.array([moving_all[s] for s in good_keys])\n",
-    "#fixed_src = np.array([fixed_all[s] for s in good_keys])\n",
-    "#transformation_matrix = compute_affine_transformation(moving_src, fixed_src)\n",
-    "\n",
-    "transform_parameters = [0.955146, 0.333175, 0.110121, -0.462277, 0.956330, \n",
-    "                                    0.056532, 0.003245, -0.017109, 0.969857, 307.262939, 123.364020, -40.399677]\n",
-    "transform_parameters = [0.955146, 0.333175, 0.110121, -0.462277, 0.956330, \n",
-    "                                    0.056532, 0.003245, -0.017109, 0.969857, 0, 0, 0]\n",
-    "rotation = transform_parameters[:9]\n",
-    "rotation = np.array(rotation).reshape(3,3)\n",
-    "transformation_matrix = rotation.copy()\n",
-    "translation = np.array(transform_parameters[-3:])\n",
-    "t = translation.reshape(3,1)\n",
-    "transformation_matrix = np.hstack( [rotation, t ])\n",
-    "transformation_matrix = np.vstack([transformation_matrix, np.array([0, 0, 0, 1])])\n",
-    "#print(repr(transformation_matrix))\n",
-    "\n",
-    "euler = [-0.070265, -0.021537, -0.490839, 126.889695, 44.602420, -18.971854]  # [rx, ry, rz, tx, ty, tz]\n",
-    "T = euler_to_rigid_transform(euler, degrees=False)\n",
+    "euler = [-0.071714, -0.036631, -0.476278, 326.744936, 115.845161, -47.838387]\n",
+    "transformation_matrix = euler_to_rigid_transform(euler, degrees=False)\n",
     "#print(\"Rigid Transformation Matrix:\\n\", T)\n",
-    "print(repr(T))\n",
+    "print(repr(transformation_matrix))\n",
     "A = T[:3, :3]\n",
     "print(A.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "16d3534e",
+   "execution_count": null,
+   "id": "3ac67820",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[535 666 515]\n",
-      "[920. 415. 459.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Apply affine transformation\n",
     "# Apply affine transformation\n",
@@ -269,27 +192,20 @@
     "print(origin)\n",
     "#print(origin + translation/10)\n",
     "#transformation_matrix = np.linalg.inv(transformation_matrix)\n",
-    "trans_origin = apply_affine_transform(origin, T)\n",
+    "trans_origin = apply_affine_transform(origin, transformation_matrix)\n",
     "print(np.round(trans_origin))\n",
     "# 100,10\n",
     "#[884 697 296]\n",
-    "#[718. 778. 224.]"
+    "#[718. 778. 224.]\n",
+    "# 25um calc [920. 415. 459.]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "8860c495",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMS 244.05006368736576\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_list = []\n",
     "error = []\n",
@@ -316,20 +232,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "4e7b269b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AtlasV8 SC [8345. 3155. 6919.]\n",
-      "Allen SC [9140. 2388. 5692.]\n",
-      "AtlasV8 transformed SC [9144. 2216. 5742.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "structure = 'SC'\n",
     "try:\n",
@@ -346,327 +252,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9d3a9a9a",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>structure</th>\n",
-       "      <th>MD589</th>\n",
-       "      <th>Allen</th>\n",
-       "      <th>transformed</th>\n",
-       "      <th>difference</th>\n",
-       "      <th>sumsquares</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>IC</td>\n",
-       "      <td>[12363.0, 4873.0, 4320.0]</td>\n",
-       "      <td>[10400.0, 2325.0, 5675.0]</td>\n",
-       "      <td>[10379.0, 2299.0, 5640.0]</td>\n",
-       "      <td>[-21.0, -26.0, -35.0]</td>\n",
-       "      <td>48.3085</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>PBG_L</td>\n",
-       "      <td>[11184.0, 6169.0, 2560.0]</td>\n",
-       "      <td>[9403.0, 3844.0, 3551.0]</td>\n",
-       "      <td>[9334.0, 3787.0, 3615.0]</td>\n",
-       "      <td>[-69.0, -57.0, 64.0]</td>\n",
-       "      <td>110.0859</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>VLL_L</td>\n",
-       "      <td>[11083.0, 7204.0, 2960.0]</td>\n",
-       "      <td>[9464.0, 5176.0, 3890.0]</td>\n",
-       "      <td>[9419.0, 5086.0, 3980.0]</td>\n",
-       "      <td>[-46.0, -90.0, 90.0]</td>\n",
-       "      <td>134.9123</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>PBG_R</td>\n",
-       "      <td>[11258.0, 5836.0, 6320.0]</td>\n",
-       "      <td>[9401.0, 3846.0, 7833.0]</td>\n",
-       "      <td>[9527.0, 3833.0, 7770.0]</td>\n",
-       "      <td>[126.0, -14.0, -63.0]</td>\n",
-       "      <td>142.0177</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7N_R</td>\n",
-       "      <td>[12295.0, 8389.0, 5900.0]</td>\n",
-       "      <td>[10853.0, 6775.0, 7045.0]</td>\n",
-       "      <td>[10949.0, 6700.0, 7119.0]</td>\n",
-       "      <td>[96.0, -75.0, 74.0]</td>\n",
-       "      <td>142.8741</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>SNC_R</td>\n",
-       "      <td>[10009.0, 6740.0, 5840.0]</td>\n",
-       "      <td>[8356.0, 5123.0, 7092.0]</td>\n",
-       "      <td>[8408.0, 5015.0, 7180.0]</td>\n",
-       "      <td>[52.0, -108.0, 88.0]</td>\n",
-       "      <td>148.4992</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4N_L</td>\n",
-       "      <td>[11404.0, 6145.0, 4180.0]</td>\n",
-       "      <td>[9589.0, 3778.0, 5432.0]</td>\n",
-       "      <td>[9623.0, 3925.0, 5396.0]</td>\n",
-       "      <td>[34.0, 147.0, -36.0]</td>\n",
-       "      <td>155.6349</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5N_R</td>\n",
-       "      <td>[11625.0, 7238.0, 5980.0]</td>\n",
-       "      <td>[10193.0, 5286.0, 7293.0]</td>\n",
-       "      <td>[10101.0, 5420.0, 7293.0]</td>\n",
-       "      <td>[-92.0, 134.0, 0.0]</td>\n",
-       "      <td>163.0793</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7N_L</td>\n",
-       "      <td>[12338.0, 8595.0, 3460.0]</td>\n",
-       "      <td>[10853.0, 6775.0, 4340.0]</td>\n",
-       "      <td>[10914.0, 6647.0, 4424.0]</td>\n",
-       "      <td>[61.0, -128.0, 84.0]</td>\n",
-       "      <td>165.0618</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Sp5I_L</td>\n",
-       "      <td>[13699.0, 8058.0, 2700.0]</td>\n",
-       "      <td>[12107.0, 5872.0, 3748.0]</td>\n",
-       "      <td>[12145.0, 5740.0, 3625.0]</td>\n",
-       "      <td>[39.0, -132.0, -123.0]</td>\n",
-       "      <td>184.4487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Sp5I_R</td>\n",
-       "      <td>[13702.0, 7752.0, 6400.0]</td>\n",
-       "      <td>[12107.0, 5872.0, 7638.0]</td>\n",
-       "      <td>[12269.0, 5819.0, 7711.0]</td>\n",
-       "      <td>[163.0, -53.0, 74.0]</td>\n",
-       "      <td>186.2269</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6N_L</td>\n",
-       "      <td>[12270.0, 7451.0, 4100.0]</td>\n",
-       "      <td>[10771.0, 5215.0, 5291.0]</td>\n",
-       "      <td>[10691.0, 5365.0, 5211.0]</td>\n",
-       "      <td>[-80.0, 151.0, -80.0]</td>\n",
-       "      <td>188.3600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Sp5C_L</td>\n",
-       "      <td>[14507.0, 8177.0, 3120.0]</td>\n",
-       "      <td>[12833.0, 5896.0, 3980.0]</td>\n",
-       "      <td>[12987.0, 5829.0, 4075.0]</td>\n",
-       "      <td>[155.0, -67.0, 95.0]</td>\n",
-       "      <td>193.5922</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>DC_R</td>\n",
-       "      <td>[12690.0, 6824.0, 6700.0]</td>\n",
-       "      <td>[11271.0, 5002.0, 8156.0]</td>\n",
-       "      <td>[11127.0, 4876.0, 8111.0]</td>\n",
-       "      <td>[-144.0, -125.0, -45.0]</td>\n",
-       "      <td>196.2611</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>SNC_L</td>\n",
-       "      <td>[10026.0, 6951.0, 3360.0]</td>\n",
-       "      <td>[8354.0, 5125.0, 4294.0]</td>\n",
-       "      <td>[8345.0, 4966.0, 4440.0]</td>\n",
-       "      <td>[-9.0, -159.0, 147.0]</td>\n",
-       "      <td>216.5470</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4N_R</td>\n",
-       "      <td>[11411.0, 6143.0, 4720.0]</td>\n",
-       "      <td>[9587.0, 3775.0, 5953.0]</td>\n",
-       "      <td>[9655.0, 3987.0, 5989.0]</td>\n",
-       "      <td>[68.0, 212.0, 37.0]</td>\n",
-       "      <td>225.7166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Sp5O_R</td>\n",
-       "      <td>[12781.0, 7768.0, 6380.0]</td>\n",
-       "      <td>[11138.0, 5913.0, 7598.0]</td>\n",
-       "      <td>[11355.0, 5954.0, 7691.0]</td>\n",
-       "      <td>[216.0, 41.0, 93.0]</td>\n",
-       "      <td>239.0646</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Amb_L</td>\n",
-       "      <td>[13146.0, 8541.0, 3340.0]</td>\n",
-       "      <td>[11883.0, 6618.0, 4324.0]</td>\n",
-       "      <td>[11702.0, 6464.0, 4294.0]</td>\n",
-       "      <td>[-181.0, -154.0, -30.0]</td>\n",
-       "      <td>239.1675</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>SC</td>\n",
-       "      <td>[11306.0, 4688.0, 4300.0]</td>\n",
-       "      <td>[9140.0, 2388.0, 5692.0]</td>\n",
-       "      <td>[9297.0, 2212.0, 5634.0]</td>\n",
-       "      <td>[156.0, -176.0, -58.0]</td>\n",
-       "      <td>242.5572</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6N_R</td>\n",
-       "      <td>[12251.0, 7437.0, 4900.0]</td>\n",
-       "      <td>[10771.0, 5215.0, 6094.0]</td>\n",
-       "      <td>[10707.0, 5448.0, 6090.0]</td>\n",
-       "      <td>[-65.0, 234.0, -4.0]</td>\n",
-       "      <td>242.5615</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3N_L</td>\n",
-       "      <td>[11089.0, 6039.0, 4400.0]</td>\n",
-       "      <td>[9102.0, 3794.0, 5521.0]</td>\n",
-       "      <td>[9303.0, 3866.0, 5646.0]</td>\n",
-       "      <td>[201.0, 71.0, 125.0]</td>\n",
-       "      <td>247.3406</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Sp5O_L</td>\n",
-       "      <td>[12917.0, 8047.0, 2800.0]</td>\n",
-       "      <td>[11139.0, 5912.0, 3787.0]</td>\n",
-       "      <td>[11371.0, 5839.0, 3737.0]</td>\n",
-       "      <td>[232.0, -73.0, -49.0]</td>\n",
-       "      <td>248.0081</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>LRt_L</td>\n",
-       "      <td>[13929.0, 8906.0, 3480.0]</td>\n",
-       "      <td>[12344.0, 6991.0, 4393.0]</td>\n",
-       "      <td>[12547.0, 6818.0, 4419.0]</td>\n",
-       "      <td>[202.0, -173.0, 26.0]</td>\n",
-       "      <td>267.3810</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>LRt_R</td>\n",
-       "      <td>[13791.0, 8602.0, 5760.0]</td>\n",
-       "      <td>[12344.0, 6991.0, 6993.0]</td>\n",
-       "      <td>[12465.0, 6746.0, 6946.0]</td>\n",
-       "      <td>[121.0, -245.0, -47.0]</td>\n",
-       "      <td>276.8068</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>Amb_R</td>\n",
-       "      <td>[13058.0, 8251.0, 5920.0]</td>\n",
-       "      <td>[11881.0, 6618.0, 7062.0]</td>\n",
-       "      <td>[11687.0, 6440.0, 7149.0]</td>\n",
-       "      <td>[-194.0, -178.0, 88.0]</td>\n",
-       "      <td>277.5343</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3N_R</td>\n",
-       "      <td>[11109.0, 6058.0, 4680.0]</td>\n",
-       "      <td>[9103.0, 3794.0, 5864.0]</td>\n",
-       "      <td>[9339.0, 3919.0, 5953.0]</td>\n",
-       "      <td>[235.0, 125.0, 88.0]</td>\n",
-       "      <td>280.7393</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>SNR_R</td>\n",
-       "      <td>[10286.0, 6787.0, 5940.0]</td>\n",
-       "      <td>[8440.0, 5167.0, 7353.0]</td>\n",
-       "      <td>[8696.0, 5047.0, 7286.0]</td>\n",
-       "      <td>[255.0, -120.0, -68.0]</td>\n",
-       "      <td>290.2549</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>DC_L</td>\n",
-       "      <td>[12793.0, 7202.0, 2380.0]</td>\n",
-       "      <td>[11270.0, 5002.0, 3229.0]</td>\n",
-       "      <td>[11092.0, 4794.0, 3338.0]</td>\n",
-       "      <td>[-178.0, -208.0, 109.0]</td>\n",
-       "      <td>294.3242</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>SNR_L</td>\n",
-       "      <td>[10298.0, 6970.0, 3140.0]</td>\n",
-       "      <td>[8441.0, 5167.0, 4032.0]</td>\n",
-       "      <td>[8609.0, 4928.0, 4197.0]</td>\n",
-       "      <td>[168.0, -240.0, 165.0]</td>\n",
-       "      <td>335.9495</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>LC_L</td>\n",
-       "      <td>[12177.0, 6782.0, 3600.0]</td>\n",
-       "      <td>[10710.0, 4278.0, 4732.0]</td>\n",
-       "      <td>[10468.0, 4518.0, 4710.0]</td>\n",
-       "      <td>[-242.0, 240.0, -22.0]</td>\n",
-       "      <td>340.8623</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>AP</td>\n",
-       "      <td>[14024.0, 7549.0, 4460.0]</td>\n",
-       "      <td>[12653.0, 5010.0, 5692.0]</td>\n",
-       "      <td>[12468.0, 5302.0, 5594.0]</td>\n",
-       "      <td>[-186.0, 292.0, -98.0]</td>\n",
-       "      <td>359.2682</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7n_L</td>\n",
-       "      <td>[12054.0, 7819.0, 3460.0]</td>\n",
-       "      <td>[10687.0, 5483.0, 4706.0]</td>\n",
-       "      <td>[10506.0, 5756.0, 4481.0]</td>\n",
-       "      <td>[-181.0, 273.0, -225.0]</td>\n",
-       "      <td>397.6457</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>LC_R</td>\n",
-       "      <td>[12138.0, 6702.0, 5340.0]</td>\n",
-       "      <td>[10710.0, 4279.0, 6652.0]</td>\n",
-       "      <td>[10496.0, 4638.0, 6628.0]</td>\n",
-       "      <td>[-214.0, 359.0, -24.0]</td>\n",
-       "      <td>418.8302</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7n_R</td>\n",
-       "      <td>[12036.0, 7632.0, 5680.0]</td>\n",
-       "      <td>[10688.0, 5482.0, 6677.0]</td>\n",
-       "      <td>[10560.0, 5802.0, 6934.0]</td>\n",
-       "      <td>[-128.0, 320.0, 256.0]</td>\n",
-       "      <td>429.6950</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>RtTg</td>\n",
-       "      <td>[10936.0, 7869.0, 4120.0]</td>\n",
-       "      <td>[9503.0, 5322.0, 5692.0]</td>\n",
-       "      <td>[9432.0, 6038.0, 5206.0]</td>\n",
-       "      <td>[-71.0, 717.0, -487.0]</td>\n",
-       "      <td>869.0079</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>VLL_R</td>\n",
-       "      <td>[10650.0, 6334.0, 5912.0]</td>\n",
-       "      <td>[9465.0, 5174.0, 7495.0]</td>\n",
-       "      <td>[8983.0, 4456.0, 7287.0]</td>\n",
-       "      <td>[-482.0, -718.0, -209.0]</td>\n",
-       "      <td>889.1803</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "columns = ['structure', moving_name, fixed_name, 'transformed', 'difference', 'sumsquares']\n",
     "df = pd.DataFrame(df_list, columns=columns)\n",
