Adjusted the transformix paths in transformix points

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eddyod/programming/pipeline/src\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -37,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "45da981f",
    "metadata": {},
    "outputs": [],
@@ -48,10 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "299762ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost Version: 2.1.4\n"
+     ]
+    }
+   ],
    "source": [
     "from library.controller.sql_controller import SqlController\n",
     "from library.image_manipulation.filelocation_manager import FileLocationManager\n",
@@ -64,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -166,29 +182,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "ec1aac4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array([[ 8.88575421e-01, -4.57335265e-01,  3.57515908e-02,\n",
+      "        -2.35788051e+02],\n",
+      "       [ 4.58688870e-01,  8.86842829e-01, -5.58060647e-02,\n",
+      "        -1.69603207e+02],\n",
+      "       [-6.18396059e-03,  6.59867543e-02,  9.97801336e-01,\n",
+      "         3.68774080e+01],\n",
+      "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+      "         1.00000000e+00]])\n",
+      "(3, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "euler = [-0.071714, -0.036631, -0.476278, 326.744936, 115.845161, -47.838387]\n",
-    "transformation_matrix = euler_to_rigid_transform(euler, degrees=False)\n",
+    "reuler = [0.066036, 0.006184, 0.476529, -235.788051, -169.603207, 36.877408]\n",
+    "transformation_matrix = euler_to_rigid_transform(reuler, degrees=False)\n",
     "#print(\"Rigid Transformation Matrix:\\n\", T)\n",
     "print(repr(transformation_matrix))\n",
-    "A = T[:3, :3]\n",
+    "A = transformation_matrix[:3, :3]\n",
     "print(A.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3ac67820",
+   "execution_count": 21,
+   "id": "3082ea73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[535 666 515]\n",
+      "[-47. 638. 591.]\n"
+     ]
+    }
+   ],
    "source": [
     "# Apply affine transformation\n",
     "# Apply affine transformation\n",
     "origin = np.array([535, 666, 515])\n",
+    "torigin = np.array([1108,  502,  437])\n",
     "print(origin)\n",
     "#print(origin + translation/10)\n",
     "#transformation_matrix = np.linalg.inv(transformation_matrix)\n",
@@ -197,7 +240,8 @@
     "# 100,10\n",
     "#[884 697 296]\n",
     "#[718. 778. 224.]\n",
-    "# 25um calc [920. 415. 459.]"
+    "# 25um calc [920. 415. 459.]\n",
+    "# inv or reuler = [1065.  420.  458.]"
    ]
   },
   {
