--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "ec1aac4f",
    "metadata": {},
    "outputs": [
@@ -190,12 +190,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "array([[ 8.88575421e-01, -4.57335265e-01,  3.57515908e-02,\n",
-      "        -2.35788051e+02],\n",
-      "       [ 4.58688870e-01,  8.86842829e-01, -5.58060647e-02,\n",
-      "        -1.69603207e+02],\n",
-      "       [-6.18396059e-03,  6.59867543e-02,  9.97801336e-01,\n",
-      "         3.68774080e+01],\n",
+      "array([[ 9.96760537e-01,  7.16044788e-02, -3.66228085e-02,\n",
+      "         3.26744936e+02],\n",
+      "       [-4.69306871e-02,  8.87626321e-01,  4.58167026e-01,\n",
+      "         1.15845161e+02],\n",
+      "       [ 6.53141799e-02, -4.54964078e-01,  8.88111336e-01,\n",
+      "        -4.78383870e+01],\n",
       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
       "         1.00000000e+00]])\n",
       "(3, 3)\n"
@@ -205,7 +205,7 @@
    "source": [
     "euler = [-0.071714, -0.036631, -0.476278, 326.744936, 115.845161, -47.838387]\n",
     "reuler = [0.066036, 0.006184, 0.476529, -235.788051, -169.603207, 36.877408]\n",
-    "transformation_matrix = euler_to_rigid_transform(reuler, degrees=False)\n",
+    "transformation_matrix = euler_to_rigid_transform(euler, rotation_order='zyx', degrees=False)\n",
     "#print(\"Rigid Transformation Matrix:\\n\", T)\n",
     "print(repr(transformation_matrix))\n",
     "A = transformation_matrix[:3, :3]\n",
@@ -214,8 +214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "3082ea73",
+   "execution_count": 27,
+   "id": "da0020a1",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
      "output_type": "stream",
      "text": [
       "[535 666 515]\n",
-      "[-47. 638. 591.]\n"
+      "[889. 918. 141.]\n"
      ]
     }
    ],
