Put zoom back in for create volume

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "ec1aac4f",
    "metadata": {},
    "outputs": [
@@ -190,12 +190,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "array([[ 9.96760537e-01,  7.16044788e-02, -3.66228085e-02,\n",
-      "         3.26744936e+02],\n",
-      "       [-4.69306871e-02,  8.87626321e-01,  4.58167026e-01,\n",
-      "         1.15845161e+02],\n",
-      "       [ 6.53141799e-02, -4.54964078e-01,  8.88111336e-01,\n",
-      "        -4.78383870e+01],\n",
+      "array([[ 9.98172904e-01, -6.01697163e-02,  5.51897198e-03,\n",
+      "         5.61462927e+02],\n",
+      "       [ 5.00696928e-02,  8.74818240e-01,  4.81856900e-01,\n",
+      "         2.51269841e+02],\n",
+      "       [-3.38212903e-02, -4.80700168e-01,  8.76232543e-01,\n",
+      "        -1.07314540e+01],\n",
       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
       "         1.00000000e+00]])\n",
       "(3, 3)\n"
@@ -203,8 +203,8 @@
     }
    ],
    "source": [
-    "euler = [-0.071714, -0.036631, -0.476278, 326.744936, 115.845161, -47.838387]\n",
-    "reuler = [0.066036, 0.006184, 0.476529, -235.788051, -169.603207, 36.877408]\n",
+    "euler = [0.060207, 0.005519, -0.502781, 561.462927, 251.269841, -10.731454]\n",
+    "reuler = []\n",
     "transformation_matrix = euler_to_rigid_transform(euler, rotation_order='zyx', degrees=False)\n",
     "#print(\"Rigid Transformation Matrix:\\n\", T)\n",
     "print(repr(transformation_matrix))\n",
@@ -214,8 +214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "da0020a1",
+   "execution_count": 32,
+   "id": "8a6b77ff",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
      "output_type": "stream",
      "text": [
       "[535 666 515]\n",
-      "[889. 918. 141.]\n"
+      "[1058. 1109.  102.]\n"
      ]
     }
    ],
@@ -231,11 +231,11 @@
     "# Apply affine transformation\n",
     "# Apply affine transformation\n",
     "origin = np.array([535, 666, 515])\n",
-    "torigin = np.array([1108,  502,  437])\n",
     "print(origin)\n",
     "#print(origin + translation/10)\n",
     "#transformation_matrix = np.linalg.inv(transformation_matrix)\n",
     "trans_origin = apply_affine_transform(origin, transformation_matrix)\n",
+    "scale0 = np.array([])\n",
     "print(np.round(trans_origin))\n",
     "# 100,10\n",
     "#[884 697 296]\n",
