Added ComputeZYX to register volume

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "id": "ec1aac4f",
    "metadata": {},
    "outputs": [
@@ -209,33 +209,43 @@
     "#print(\"Rigid Transformation Matrix:\\n\", T)\n",
     "print(repr(transformation_matrix))\n",
     "A = transformation_matrix[:3, :3]\n",
-    "print(A.shape)"
+    "print(A.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "8a6b77ff",
+   "execution_count": 47,
+   "id": "3097d1b1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[535 666 515]\n",
-      "[1058. 1109.  102.]\n"
+      "pixel [36606 35518    85]\n",
+      "um [11896.95 11543.35  1700.  ]\n",
+      "origin downsample [1143.9375 1109.9375   85.    ]\n",
+      "10um [1189.695 1154.335  170.   ]\n",
+      "[1637. 1320. -508.]\n"
      ]
     }
    ],
    "source": [
     "# Apply affine transformation\n",
     "# Apply affine transformation\n",
-    "origin = np.array([535, 666, 515])\n",
-    "print(origin)\n",
+    "origin = np.array([36606, 35518, 85])\n",
+    "print('pixel', origin)\n",
+    "scale_um = np.array([0.325, 0.325, 20])\n",
+    "scale_downsample = np.array([1/32, 1/32, 1])\n",
+    "origin_um = origin * scale0\n",
+    "origin_downsample = origin * scale_downsample\n",
+    "print('um', origin_um)\n",
+    "print('origin downsample', origin_downsample)\n",
+    "origin_10um = origin_um / 10\n",
+    "print('10um', origin_10um)\n",
     "#print(origin + translation/10)\n",
     "#transformation_matrix = np.linalg.inv(transformation_matrix)\n",
-    "trans_origin = apply_affine_transform(origin, transformation_matrix)\n",
-    "scale0 = np.array([])\n",
+    "trans_origin = apply_affine_transform(origin_downsample, transformation_matrix)\n",
     "print(np.round(trans_origin))\n",
     "# 100,10\n",
     "#[884 697 296]\n",
