Got a test working with transforming DK78 polygon

--- a/src/atlas/notebooks/alignment-error-visualization.ipynb
+++ b/src/atlas/notebooks/alignment-error-visualization.ipynb
@@ -12,18 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "116fa24e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/eddyod/programming/pipeline/src\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -45,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "45da981f",
    "metadata": {},
    "outputs": [],
@@ -56,18 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "299762ca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XGBoost Version: 2.1.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from library.controller.sql_controller import SqlController\n",
     "from library.image_manipulation.filelocation_manager import FileLocationManager\n",
@@ -80,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6342efe3-8054-4acd-9dc6-8a5d22d87ba3",
    "metadata": {},
    "outputs": [],
@@ -182,30 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "ec1aac4f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "array([[ 9.98172904e-01, -6.01697163e-02,  5.51897198e-03,\n",
-      "         5.61462927e+02],\n",
-      "       [ 5.00696928e-02,  8.74818240e-01,  4.81856900e-01,\n",
-      "         2.51269841e+02],\n",
-      "       [-3.38212903e-02, -4.80700168e-01,  8.76232543e-01,\n",
-      "        -1.07314540e+01],\n",
-      "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
-      "         1.00000000e+00]])\n",
-      "(3, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "euler = [0.060207, 0.005519, -0.502781, 561.462927, 251.269841, -10.731454]\n",
-    "reuler = []\n",
-    "transformation_matrix = euler_to_rigid_transform(euler, rotation_order='zyx', degrees=False)\n",
+    "euler = [-0.071714, -0.036631, -0.476278, 326.744936, 115.845161, -47.838387]\n",
+    "reuler = [0.066036, 0.006184, 0.476529, -235.788051, -169.603207, 36.877408]\n",
+    "transformation_matrix = euler_to_rigid_transform(euler, rotation_order='xyz', degrees=False)\n",
     "#print(\"Rigid Transformation Matrix:\\n\", T)\n",
     "print(repr(transformation_matrix))\n",
     "A = transformation_matrix[:3, :3]\n",
@@ -214,38 +182,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "3097d1b1",
+   "execution_count": null,
+   "id": "71722f78",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pixel [36606 35518    85]\n",
-      "um [11896.95 11543.35  1700.  ]\n",
-      "origin downsample [1143.9375 1109.9375   85.    ]\n",
-      "10um [1189.695 1154.335  170.   ]\n",
-      "[1637. 1320. -508.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Apply affine transformation\n",
     "# Apply affine transformation\n",
-    "origin = np.array([36606, 35518, 85])\n",
+    "origin = np.array([179.000000, 881.000000, 171.000000])\n",
     "print('pixel', origin)\n",
     "scale_um = np.array([0.325, 0.325, 20])\n",
-    "scale_downsample = np.array([1/32, 1/32, 1])\n",
-    "origin_um = origin * scale0\n",
-    "origin_downsample = origin * scale_downsample\n",
-    "print('um', origin_um)\n",
-    "print('origin downsample', origin_downsample)\n",
+    "#scale_downsample = np.array([1/32, 1/32, 1])\n",
+    "origin_um = origin * scale_um\n",
+    "#origin_downsample = origin * scale_downsample\n",
+    "print('origin um', origin_um)\n",
+    "#print('origin downsample', origin_downsample)\n",
     "origin_10um = origin_um / 10\n",
-    "print('10um', origin_10um)\n",
+    "origin_10um = np.array([535, 666, 515])\n",
+    "print('origin 10um', origin_10um)\n",
     "#print(origin + translation/10)\n",
     "#transformation_matrix = np.linalg.inv(transformation_matrix)\n",
-    "trans_origin = apply_affine_transform(origin_downsample, transformation_matrix)\n",
+    "trans_origin = apply_affine_transform(origin, transformation_matrix)\n",
     "print(np.round(trans_origin))\n",
     "# 100,10\n",
     "#[884 697 296]\n",
